<resources>
    <string name="app_name">instalogin</string>
    <string name="email_address">Email address</string>
    <string name="UserName">UserName</string>
    <string name="CIN">CIN</string>
    <string name="Date_Birth">Birthday Date</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account"><u>Don\'t have an account?</u></string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_up_with"><u>Or Sign up with</u></string>
    <string name="sign_in_with_gmail">Sign in with Gmail</string>
    <string name="ajouter">Add</string>
    <string name="modifier">Modify</string>
    <string name="supprimer">Delete</string>
    <string name="nom_projet">Project Name</string>
    <string name="or">or</string>
</resources>
