<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".Modification">


        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <EditText
            android:id="@+id/Titre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/nom_projet"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="223dp" />


        <Button
            android:id="@+id/modifier_projet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:text="@string/modifier"
            android:textAllCaps="false"
            android:textColor="@color/login_form_details_medium"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/Titre" />
    <Button
        android:id="@+id/btn_supprimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/supprimer"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/modifier_projet" />

    <TextView
        android:id="@+id/id"
        android:layout_width="138dp"
        android:layout_height="19dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="464dp" />


</android.support.constraint.ConstraintLayout>
